@@ -1,65 +1,66 @@
 package _2021.day04;
 
-import utils.FileReader;
+import utils.InputReader;
 
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 
 public class Part1 {
     public static void main(String[] args) {
         List<Integer> calledNumbers = getCalledNumbers();
-        List<LinkedHashMap<Integer, Boolean>> boards = getBoards();
+        List<List<Integer[]>> boards = getBoards();
         int score = 0;
         
         for (Integer calledNumber : calledNumbers) {
-            for (LinkedHashMap<Integer, Boolean> board : boards) {
-                if (board.containsKey(calledNumber)) {
-                    board.put(calledNumber, true);
-                    // Check if the board has bingo
-                    if (checkBingo(board)) {
-                        int sum = 0;
-                        // Calculate sum of all unmarked numbers
-                        for (Map.Entry<Integer, Boolean> entry : board.entrySet()) {
-                            if (!entry.getValue()) {
-                                sum = sum + entry.getKey();
+            for (List<Integer[]> board : boards) {
+                for (int i = 0; i < board.size(); i++) {
+                    // Board contains called number
+                    if (board.get(i)[0].equals(calledNumber)) {
+                        board.get(i)[1] = 1;
+                        // Check if the board has bingo
+                        if (checkBingo(board)) {
+                            int sum = 0;
+                            // Calculate sum of all unmarked numbers
+                            for (Integer[] number : board) {
+                                if (number[1] == 0) {
+                                    sum = sum + number[0];
+                                }
                             }
+                            // Multiply by the last number called
+                            score = sum * calledNumber;
+                            break;
                         }
-                        // Multiply by the last number called
-                        score = sum * calledNumber;
-                        break;
                     }
                 }
+                if (score > 0) break;
             }
-            if (score > 0) {
-                break;
-            }
+            if (score > 0) break;
         }
         
         System.out.println("The final score of the board that will win first is:");
         System.out.println(score);
     }
     
-    private static boolean checkBingo(LinkedHashMap<Integer, Boolean> board) {
-        Boolean[] isMarked = board.values().toArray(new Boolean[0]);
+    private static boolean checkBingo(List<Integer[]> board) {
         // Check horizontal
         for (int i = 0; i < 25; i += 5) {
-            if (isMarked[i]
-                    && isMarked[i + 1]
-                    && isMarked[i + 2]
-                    && isMarked[i + 3]
-                    && isMarked[i + 4]) {
+            if (board.get(i)[1] == 1
+                    && board.get(i + 1)[1] == 1
+                    && board.get(i + 2)[1] == 1
+                    && board.get(i + 3)[1] == 1
+                    && board.get(i + 4)[1] == 1
+            ) {
                 return true;
             }
         }
         // Check vertical
         for (int i = 0; i < 5; i++) {
-            if (isMarked[i]
-                    && isMarked[i + 5]
-                    && isMarked[i + 10]
-                    && isMarked[i + 15]
-                    && isMarked[i + 20]) {
+            if (board.get(i)[1] == 1
+                    && board.get(i + 5)[1] == 1
+                    && board.get(i + 10)[1] == 1
+                    && board.get(i + 15)[1] == 1
+                    && board.get(i + 20)[1] == 1) {
                 return true;
             }
         }
@@ -69,45 +70,33 @@ public class Part1 {
     
     private static List<Integer> getCalledNumbers() {
         return Arrays
-                .stream(FileReader.readFile("/_2021/day04-input.txt").get(0).split(","))
+                .stream(InputReader.readFile("/_2021/day04-input.txt").get(0).split(","))
                 .map(Integer::parseInt)
-                .collect(Collectors.toList());
+                .toList();
     }
     
-    private static List<LinkedHashMap<Integer, Boolean>> getBoards() {
-        LinkedHashMap<Integer, Boolean> board = new LinkedHashMap<>();
-        List<LinkedHashMap<Integer, Boolean>> boards = new ArrayList<>();
+    private static List<List<Integer[]>> getBoards() {
+        List<Integer[]> board = new ArrayList<>();
+        List<List<Integer[]>> boards = new ArrayList<>();
         
-        try {
-            File file = new File("src/main/resources/day04-input.txt");
-            Scanner scanner = new Scanner(file);
-            // Skip to boards
-            scanner.nextLine();
-            while (scanner.hasNextLine()) {
-                String row = scanner.nextLine();
-                
-                if (!row.isEmpty()) {
-                    // Split numbers
-                    row = row.replace("  ", ",");
-                    row = row.replace(" ", ",");
-                    String[] numberStrings = row.split(",");
-                    
-                    for (String numberString : numberStrings) {
-                        if (!numberString.isEmpty()) {
-                            board.put(Integer.parseInt(numberString), false);
-                        }
-                    }
-                }
-                // Check if board has 25 numbers
-                if (board.size() > 24) {
-                    // Add to board list and clear the board
-                    boards.add(board);
-                    board = new LinkedHashMap<>();
+        List<String> lines = InputReader.readFile("/_2021/day04-input.txt");
+        lines = lines.subList(1, lines.size());
+        
+        for (String line : lines) {
+            if (!line.isEmpty()) {
+                List<Integer> numbers = Arrays.stream(line.replace("  ", " ").split(" "))
+                        .filter(s -> !s.isEmpty())
+                        .map(Integer::parseInt)
+                        .toList();
+                for (Integer number : numbers) {
+                    board.add(new Integer[]{number, 0});
                 }
             }
-            scanner.close();
-        } catch (FileNotFoundException e) {
-            e.printStackTrace();
+            // Check if board has 25 numbers
+            if (board.size() == 25) {
+                boards.add(board);
+                board = new ArrayList<>();
+            }
         }
         
         return boards;
